# comdev-metrics

./: .gitignore  .secrets.example  DATA_SOURCES.md  EMAIL_DRAFT.md  PLAN.md  README.md  config.example.yml  pyproject.toml
site/: about.html  index.html  project.html
src/asfmetrics/: __init__.py  cli.py  config.py  health.py
src/asfmetrics/analysis/: __init__.py
src/asfmetrics/collectors/: __init__.py  git_activity.py  github_repos.py  mailing_lists.py  projects_apache_org.py
src/asfmetrics/output/: __init__.py  json_api.py
