[project]
name = "asfmetrics"
version = "0.1.0"
description = "Apache Community Development project metrics dashboard"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
asfmetrics = "asfmetrics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asfmetrics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
